--- a/sub/projects.html
+++ b/sub/projects.html
@@ -207,6 +207,7 @@
 
         .container .box .imgBox img{
             max-width: 100%;
+            height: 300px;
             transition: transform 2s;
         }
 
@@ -495,20 +496,18 @@
 <div class="container">
     <div class="box">
         <div class="imgBox">
-            <img src="assets/images/image1.jpg">
+            <img src="assests/images/assgn1.png">
         </div>
         <div class="details">
             <div class="content">
-                <h2>What is Lorem</h2>
-                <p>Get Grammarly for Instant Help With English Writing, Spelling, and Punctuation.
-                    Grammarly Helps You Write Your Best. See Immediate Results. Try Now! AI Writing Assistant.
-                    Easily Improve Any Text. Eliminate Grammar Errors. Find and Add Sources Fast.</p>
+                <h2><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2001"><h2>Assignment - 01</h2></a></h2>
+                <p></p>
             </div>
         </div>
     </div>
     <div class="box">
         <div class="imgBox">
-            <img src="assets/images/image1.jpg">
+            <img src="assests/images/assign2.png">
         </div>
         <div class="details">
             <div class="content">
