--- a/sub/projects.html
+++ b/sub/projects.html
@@ -551,14 +551,12 @@
     </div>
     <div class="box">
         <div class="imgBox">
-            <img src="assets/images/image1.jpg">
+            <img src="assests/images/assign6.png">
         </div>
         <div class="details">
             <div class="content">
-                <h2>What is Lorem</h2>
-                <p>Get Grammarly for Instant Help With English Writing, Spelling, and Punctuation.
-                    Grammarly Helps You Write Your Best. See Immediate Results. Try Now! AI Writing Assistant.
-                    Easily Improve Any Text. Eliminate Grammar Errors. Find and Add Sources Fast.</p>
+                <h2><a href="../My%20Projects/CSS/Animations/Assignment-%2005/case%201.html"><h2>Assignment - 06</h2></a></h2>
+                <p></p>
             </div>
         </div>
     </div>
