--- a/sub/projects.html
+++ b/sub/projects.html
@@ -562,14 +562,12 @@
     </div>
     <div class="box">
         <div class="imgBox">
-            <img src="assets/images/image1.jpg">
+            <img src="assests/images/assign7.png">
         </div>
         <div class="details">
             <div class="content">
-                <h2>What is Lorem</h2>
-                <p>Get Grammarly for Instant Help With English Writing, Spelling, and Punctuation.
-                    Grammarly Helps You Write Your Best. See Immediate Results. Try Now! AI Writing Assistant.
-                    Easily Improve Any Text. Eliminate Grammar Errors. Find and Add Sources Fast.</p>
+                <h2><a href="../My%20Projects/CSS/Animations/Assignment-%2007"><h2>Assignment - 07</h2></a></h2>
+                <p></p>
             </div>
         </div>
     </div>
