--- a/sub/projects.html
+++ b/sub/projects.html
@@ -582,7 +582,28 @@
             </div>
         </div>
     </div>
-
+    <div class="box">
+        <div class="imgBox">
+            <img src="assests/images/assign9.png">
+        </div>
+        <div class="details">
+            <div class="content">
+                <h2><a href="../My%20Projects/CSS/Animations/Assignment-%2008/index2.html"><h2>Assignment - 08</h2></a></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBox">
+            <img src="assests/images/assign9.png">
+        </div>
+        <div class="details">
+            <div class="content">
+                <h2><a href="../My%20Projects/CSS/Animations/Assignment-%2009"><h2>Assignment - 09</h2></a></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
 </div>
 
 
