--- a/sub/projects.html
+++ b/sub/projects.html
@@ -595,11 +595,33 @@
     </div>
     <div class="box">
         <div class="imgBox">
-            <img src="assests/images/assign9.png">
+            <img src="assests/images/assign10.png">
         </div>
         <div class="details">
             <div class="content">
                 <h2><a href="../My%20Projects/CSS/Animations/Assignment-%2009"><h2>Assignment - 09</h2></a></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBox">
+            <img src="assests/images/assign11.png">
+        </div>
+        <div class="details">
+            <div class="content">
+                <h2><a href="../My%20Projects/CSS/Animations/Assignment-%2010"><h2>Assignment - 10</h2></a></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBox">
+            <img src="assests/images/assign11.png">
+        </div>
+        <div class="details">
+            <div class="content">
+                <h2><a href="../My%20Projects/CSS/Animations/Assignment-%2010"><h2>Assignment - 09</h2></a></h2>
                 <p></p>
             </div>
         </div>
