--- a/sub/projects.html
+++ b/sub/projects.html
@@ -626,6 +626,28 @@
             </div>
         </div>
     </div>
+    <div class="box">
+        <div class="imgBox">
+            <img src="assests/images/pos.png">
+        </div>
+        <div class="details">
+            <div class="content">
+                <h2><a href="../My%20Projects/CSS%20Frameworks/POS/index.html"><h2>POS</h2></a></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBox">
+            <img src="assests/images/case1.png">
+        </div>
+        <div class="details">
+            <div class="content">
+                <h2><a href="../My%20Projects/SPA/Animation/Case1.html"><h2>Case-1</h2></a></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
 </div>
 
 
