--- a/sub/projects.html
+++ b/sub/projects.html
@@ -643,7 +643,40 @@
         </div>
         <div class="details">
             <div class="content">
-                <h2><a href="../My%20Projects/SPA/Animation/Case1.html"><h2>Case-1</h2></a></h2>
+                <h2><a href="../My%20Projects/SPA/Animation/Case1.html"><h2>Case - 1</h2></a></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBox">
+            <img src="assests/images/case2.png">
+        </div>
+        <div class="details">
+            <div class="content">
+                <h2><a href="../My%20Projects/SPA/Animation/Case%202.html"><h2>Case - 2</h2></a></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBox">
+            <img src="assests/images/case3.png">
+        </div>
+        <div class="details">
+            <div class="content">
+                <h2><a href="../My%20Projects/SPA/Animation/Case3.html"><h2>Case - 3</h2></a></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBox">
+            <img src="assests/images/case4.png">
+        </div>
+        <div class="details">
+            <div class="content">
+                <h2><a href="../My%20Projects/SPA/Animation/Case4.html"><h2>Case - 4</h2></a></h2>
                 <p></p>
             </div>
         </div>
