--- a/sub/projects.html
+++ b/sub/projects.html
@@ -681,6 +681,17 @@
             </div>
         </div>
     </div>
+    <div class="box">
+        <div class="imgBox">
+            <img src="assests/images/pos2.png">
+        </div>
+        <div class="details">
+            <div class="content">
+                <h2><a href="../My%20Projects/SPA/index.html"><h2>POS System</h2></a></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
 </div>
 
 
