--- a/sub/aboutme.html
+++ b/sub/aboutme.html
@@ -389,7 +389,7 @@
     </section>
 
       <section>
-          <object data="../assests/resources/PROFILE.pdf" type="application/pdf" width="800" height="250"></object><br>
+          <object data="../assests/resources/Chamodi%202.pdf" type="application/pdf" width="800" height="250"></object><br>
       </section>
 
 
