--- a/sub/projects.html
+++ b/sub/projects.html
@@ -176,7 +176,7 @@
         body{
             margin: 0;
             padding: 0;
-            background: #262626;
+            backgr,ound: #262626;
             font-family: sans-serif;
         }
 
